gen/com/demo/parser/PurescriptParser.java
// This is a generated file. Not intended for manual editing.
package com.demo.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.demo.psi.PurescriptTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class PurescriptParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == PS_AEXP) {
      r = aexp(b, 0);
    }
    else if (t == PS_ALT) {
      r = alt(b, 0);
    }
    else if (t == PS_ALTS) {
      r = alts(b, 0);
    }
    else if (t == PS_APAT) {
      r = apat(b, 0);
    }
    else if (t == PS_ATYPE) {
      r = atype(b, 0);
    }
    else if (t == PS_CASEEXP) {
      r = caseexp(b, 0);
    }
    else if (t == PS_CDECL) {
      r = cdecl(b, 0);
    }
    else if (t == PS_CDECLS) {
      r = cdecls(b, 0);
    }
    else if (t == PS_CLASSDECL) {
      r = classdecl(b, 0);
    }
    else if (t == PS_CLAZZ) {
      r = clazz(b, 0);
    }
    else if (t == PS_CNAME) {
      r = cname(b, 0);
    }
    else if (t == PS_COMMENTS) {
      r = comments(b, 0);
    }
    else if (t == PS_CON) {
      r = con(b, 0);
    }
    else if (t == PS_CONSTR) {
      r = constr(b, 0);
    }
    else if (t == PS_CONSTRS) {
      r = constrs(b, 0);
    }
    else if (t == PS_CONTEXT) {
      r = context(b, 0);
    }
    else if (t == PS_DATADECL) {
      r = datadecl(b, 0);
    }
    else if (t == PS_DECL) {
      r = decl(b, 0);
    }
    else if (t == PS_DECLS) {
      r = decls(b, 0);
    }
    else if (t == PS_DOEXP) {
      r = doexp(b, 0);
    }
    else if (t == PS_DOT_DOT_PARENS) {
      r = dot_dot_parens(b, 0);
    }
    else if (t == PS_EXP) {
      r = exp(b, 0);
    }
    else if (t == PS_EXPORT) {
      r = export(b, 0);
    }
    else if (t == PS_EXPORT_1) {
      r = export1(b, 0);
    }
    else if (t == PS_EXPORT_2) {
      r = export2(b, 0);
    }
    else if (t == PS_EXPORT_3) {
      r = export3(b, 0);
    }
    else if (t == PS_EXPORT_4) {
      r = export4(b, 0);
    }
    else if (t == PS_EXPORTS) {
      r = exports(b, 0);
    }
    else if (t == PS_FEXP) {
      r = fexp(b, 0);
    }
    else if (t == PS_FIELDDECL) {
      r = fielddecl(b, 0);
    }
    else if (t == PS_FIXITY) {
      r = fixity(b, 0);
    }
    else if (t == PS_FORIMPDECL) {
      r = forimpdecl(b, 0);
    }
    else if (t == PS_FUNID) {
      r = funid(b, 0);
    }
    else if (t == PS_FUNLHS) {
      r = funlhs(b, 0);
    }
    else if (t == PS_FUNRHS) {
      r = funrhs(b, 0);
    }
    else if (t == PS_GCON) {
      r = gcon(b, 0);
    }
    else if (t == PS_GDPAT) {
      r = gdpat(b, 0);
    }
    else if (t == PS_GDRHS) {
      r = gdrhs(b, 0);
    }
    else if (t == PS_GENDECL) {
      r = gendecl(b, 0);
    }
    else if (t == PS_GTYCON) {
      r = gtycon(b, 0);
    }
    else if (t == PS_GUARD) {
      r = guard(b, 0);
    }
    else if (t == PS_GUARDS) {
      r = guards(b, 0);
    }
    else if (t == PS_IDECL) {
      r = idecl(b, 0);
    }
    else if (t == PS_IDECLS) {
      r = idecls(b, 0);
    }
    else if (t == PS_IFEXP) {
      r = ifexp(b, 0);
    }
    else if (t == PS_IMPDECL) {
      r = impdecl(b, 0);
    }
    else if (t == PS_IMPDECLS) {
      r = impdecls(b, 0);
    }
    else if (t == PS_IMPORT_0) {
      r = import0(b, 0);
    }
    else if (t == PS_IMPORT_1) {
      r = import1(b, 0);
    }
    else if (t == PS_IMPORT_2) {
      r = import2(b, 0);
    }
    else if (t == PS_IMPSPEC) {
      r = impspec(b, 0);
    }
    else if (t == PS_INFIXEXP) {
      r = infixexp(b, 0);
    }
    else if (t == PS_INSTANCEDECL) {
      r = instancedecl(b, 0);
    }
    else if (t == PS_LAMBDAEXP) {
      r = lambdaexp(b, 0);
    }
    else if (t == PS_LETEXP) {
      r = letexp(b, 0);
    }
    else if (t == PS_LEXP) {
      r = lexp(b, 0);
    }
    else if (t == PS_LITERAL) {
      r = literal(b, 0);
    }
    else if (t == PS_LPAT) {
      r = lpat(b, 0);
    }
    else if (t == PS_MODID) {
      r = modid(b, 0);
    }
    else if (t == PS_NEWTYPECONSTR) {
      r = newtypeconstr(b, 0);
    }
    else if (t == PS_NEWTYPEDECL) {
      r = newtypedecl(b, 0);
    }
    else if (t == PS_OP) {
      r = op(b, 0);
    }
    else if (t == PS_OPS) {
      r = ops(b, 0);
    }
    else if (t == PS_PAT) {
      r = pat(b, 0);
    }
    else if (t == PS_PROPERTY) {
      r = property(b, 0);
    }
    else if (t == PS_QCON) {
      r = qcon(b, 0);
    }
    else if (t == PS_QCONID) {
      r = qconid(b, 0);
    }
    else if (t == PS_QOP) {
      r = qop(b, 0);
    }
    else if (t == PS_QTYCLS) {
      r = qtycls(b, 0);
    }
    else if (t == PS_QTYCON) {
      r = qtycon(b, 0);
    }
    else if (t == PS_QUANTIFIER) {
      r = quantifier(b, 0);
    }
    else if (t == PS_QVAR) {
      r = qvar(b, 0);
    }
    else if (t == PS_QVARID) {
      r = qvarid(b, 0);
    }
    else if (t == PS_QVAROP) {
      r = qvarop(b, 0);
    }
    else if (t == PS_QVARSYM) {
      r = qvarsym(b, 0);
    }
    else if (t == PS_REC_CONSTR) {
      r = rec_constr(b, 0);
    }
    else if (t == PS_SCONTEXT) {
      r = scontext(b, 0);
    }
    else if (t == PS_SIMPLECLASS) {
      r = simpleclass(b, 0);
    }
    else if (t == PS_SIMPLETYPE) {
      r = simpletype(b, 0);
    }
    else if (t == PS_SLASH_SLASH_PARENS) {
      r = slash_slash_parens(b, 0);
    }
    else if (t == PS_STMT) {
      r = stmt(b, 0);
    }
    else if (t == PS_STMTS) {
      r = stmts(b, 0);
    }
    else if (t == PS_TOPDECL) {
      r = topdecl(b, 0);
    }
    else if (t == PS_TOPDECLS) {
      r = topdecls(b, 0);
    }
    else if (t == PS_TYCLS) {
      r = tycls(b, 0);
    }
    else if (t == PS_TYPE) {
      r = type(b, 0);
    }
    else if (t == PS_TYPEDECL) {
      r = typedecl(b, 0);
    }
    else if (t == PS_TYPESIGDECL) {
      r = typesigdecl(b, 0);
    }
    else if (t == PS_TYPESIGLHS) {
      r = typesiglhs(b, 0);
    }
    else if (t == PS_TYVAR) {
      r = tyvar(b, 0);
    }
    else if (t == PS_VAR) {
      r = var(b, 0);
    }
    else if (t == PS_VAROP) {
      r = varop(b, 0);
    }
    else if (t == PS_VARS) {
      r = vars(b, 0);
    }
    else if (t == PS_VARSYM) {
      r = varsym(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return module_declaration(b, l + 1);
  }

  /* ********************************************************** */
  // qvar DOT qvar | qvar | var | gcon | qcon | literal | onl LEFT_PAREN exp RIGHT_PAREN | LEFT_BRACKET exp RIGHT_BRACKET | LEFT_PAREN infixexp qop RIGHT_PAREN | LEFT_PAREN qop infixexp RIGHT_PAREN | lambdaexp | LEFT_BRACE exp* (COMMA exp)* RIGHT_BRACE
  public static boolean aexp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aexp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<aexp>");
    r = aexp_0(b, l + 1);
    if (!r) r = qvar(b, l + 1);
    if (!r) r = var(b, l + 1);
    if (!r) r = gcon(b, l + 1);
    if (!r) r = qcon(b, l + 1);
    if (!r) r = literal(b, l + 1);
    if (!r) r = aexp_6(b, l + 1);
    if (!r) r = aexp_7(b, l + 1);
    if (!r) r = aexp_8(b, l + 1);
    if (!r) r = aexp_9(b, l + 1);
    if (!r) r = lambdaexp(b, l + 1);
    if (!r) r = aexp_11(b, l + 1);
    exit_section_(b, l, m, PS_AEXP, r, false, null);
    return r;
  }

  // qvar DOT qvar
  private static boolean aexp_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aexp_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = qvar(b, l + 1);
    r = r && consumeToken(b, PS_DOT);
    r = r && qvar(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // onl LEFT_PAREN exp RIGHT_PAREN
  private static boolean aexp_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aexp_6")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = onl(b, l + 1);
    r = r && consumeToken(b, PS_LEFT_PAREN);
    r = r && exp(b, l + 1);
    r = r && consumeToken(b, PS_RIGHT_PAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // LEFT_BRACKET exp RIGHT_BRACKET
  private static boolean aexp_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aexp_7")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PS_LEFT_BRACKET);
    r = r && exp(b, l + 1);
    r = r && consumeToken(b, PS_RIGHT_BRACKET);
    exit_section_(b, m, null, r);
    return r;
  }

  // LEFT_PAREN infixexp qop RIGHT_PAREN
  private static boolean aexp_8(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aexp_8")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PS_LEFT_PAREN);
    r = r && infixexp(b, l + 1);
    r = r && qop(b, l + 1);
    r = r && consumeToken(b, PS_RIGHT_PAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // LEFT_PAREN qop infixexp RIGHT_PAREN
  private static boolean aexp_9(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aexp_9")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PS_LEFT_PAREN);
    r = r && qop(b, l + 1);
    r = r && infixexp(b, l + 1);
    r = r && consumeToken(b, PS_RIGHT_PAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // LEFT_BRACE exp* (COMMA exp)* RIGHT_BRACE
  private static boolean aexp_11(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aexp_11")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PS_LEFT_BRACE);
    r = r && aexp_11_1(b, l + 1);
    r = r && aexp_11_2(b, l + 1);
    r = r && consumeToken(b, PS_RIGHT_BRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // exp*
  private static boolean aexp_11_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aexp_11_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!exp(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "aexp_11_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // (COMMA exp)*
  private static boolean aexp_11_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aexp_11_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!aexp_11_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "aexp_11_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMMA exp
  private static boolean aexp_11_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aexp_11_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PS_COMMA);
    r = r && exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // pat RIGHT_ARROW exp onl (WHERE decls)* | pat gdpat (WHERE decls)*
  public static boolean alt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<alt>");
    r = alt_0(b, l + 1);
    if (!r) r = alt_1(b, l + 1);
    exit_section_(b, l, m, PS_ALT, r, false, null);
    return r;
  }

  // pat RIGHT_ARROW exp onl (WHERE decls)*
  private static boolean alt_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alt_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = pat(b, l + 1);
    r = r && consumeToken(b, PS_RIGHT_ARROW);
    r = r && exp(b, l + 1);
    r = r && onl(b, l + 1);
    r = r && alt_0_4(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (WHERE decls)*
  private static boolean alt_0_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alt_0_4")) return false;
    int c = current_position_(b);
    while (true) {
      if (!alt_0_4_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "alt_0_4", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // WHERE decls
  private static boolean alt_0_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alt_0_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PS_WHERE);
    r = r && decls(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // pat gdpat (WHERE decls)*
  private static boolean alt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alt_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = pat(b, l + 1);
    r = r && gdpat(b, l + 1);
    r = r && alt_1_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (WHERE decls)*
  private static boolean alt_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alt_1_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!alt_1_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "alt_1_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // WHERE decls
  private static boolean alt_1_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alt_1_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PS_WHERE);
    r = r && decls(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // alt+
  public static boolean alts(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alts")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<alts>");
    r = alt(b, l + 1);
    int c = current_position_(b);
    while (r) {
      if (!alt(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "alts", c)) break;
      c = current_position_(b);
    }
    exit_section_(b, l, m, PS_ALTS, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // var (AT apat)* | gcon | qcon | literal | UNDERSCORE | LEFT_PAREN pat RIGHT_PAREN | LEFT_BRACE exp (COMMA exp)* RIGHT_BRACE
  public static boolean apat(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "apat")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<apat>");
    r = apat_0(b, l + 1);
    if (!r) r = gcon(b, l + 1);
    if (!r) r = qcon(b, l + 1);
    if (!r) r = literal(b, l + 1);
    if (!r) r = consumeToken(b, PS_UNDERSCORE);
    if (!r) r = apat_5(b, l + 1);
    if (!r) r = apat_6(b, l + 1);
    exit_section_(b, l, m, PS_APAT, r, false, null);
    return r;
  }

  // var (AT apat)*
  private static boolean apat_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "apat_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = var(b, l + 1);
    r = r && apat_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (AT apat)*
  private static boolean apat_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "apat_0_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!apat_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "apat_0_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // AT apat
  private static boolean apat_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "apat_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PS_AT);
    r = r && apat(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LEFT_PAREN pat RIGHT_PAREN
  private static boolean apat_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "apat_5")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PS_LEFT_PAREN);
    r = r && pat(b, l + 1);
    r = r && consumeToken(b, PS_RIGHT_PAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // LEFT_BRACE exp (COMMA exp)* RIGHT_BRACE
  private static boolean apat_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "apat_6")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PS_LEFT_BRACE);
    r = r && exp(b, l + 1);
    r = r && apat_6_2(b, l + 1);
    r = r && consumeToken(b, PS_RIGHT_BRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA exp)*
  private static boolean apat_6_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "apat_6_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!apat_6_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "apat_6_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMMA exp
  private static boolean apat_6_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "apat_6_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PS_COMMA);
    r = r && exp(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // gtycon | tyvar | LEFT_PAREN type RIGHT_PAREN | rec_constr | varop
  public static boolean atype(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atype")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<atype>");
    r = gtycon(b, l + 1);
    if (!r) r = tyvar(b, l + 1);
    if (!r) r = atype_2(b, l + 1);
    if (!r) r = rec_constr(b, l + 1);
    if (!r) r = varop(b, l + 1);
    exit_section_(b, l, m, PS_ATYPE, r, false, null);
    return r;
  }

  // LEFT_PAREN type RIGHT_PAREN
  private static boolean atype_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atype_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PS_LEFT_PAREN);
    r = r && type(b, l + 1);
    r = r && consumeToken(b, PS_RIGHT_PAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // impdecls topdecls
  static boolean body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "body")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = impdecls(b, l + 1);
    r = r && topdecls(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
